--- a/vignettes/Chapter11Solutions.Rmd
+++ b/vignettes/Chapter11Solutions.Rmd
@@ -135,7 +135,7 @@ data(iris)
 iris$Yflower = as.matrix(iris[,1:4])
 ft_iris = lm(Yflower~Species,data=iris)
 par(mfrow=c(1,3),mar=c(3,3,1.5,0.5),mgp=c(1.75,0.75,0))
-ecostats::plotenvelope(ft_iris,which=1:3)
+plotenvelope(ft_iris,which=1:3)
 ```
 
 This doesn't look too bad, but there is a moderate fan-shape, evident in an increasing trend in the scale-location plot, which drifts outside its simulation envelope. The trend is not strong however, with the y-axis predictions ranging from 0.6 to 1 (varying over a factor of about 1.5).
@@ -145,7 +145,7 @@ This doesn't look too bad, but there is a moderate fan-shape, evident in an incr
 iris$YfLog = as.matrix(log(iris[,1:4]))
 ft_irisLog = lm(YfLog~Species,data=iris)
 par(mfrow=c(1,3),mar=c(3,3,1.5,0.5),mgp=c(1.75,0.75,0))
-ecostats::plotenvelope(ft_irisLog,which=1:3)
+plotenvelope(ft_irisLog,which=1:3)
 ```
 
 Oh well that's disappointing! The log-transformation seems to have made things worse not better, reversing the fan-shape and the trend in the scale-location plot (although again it is not a strong trend).  Residuals now appear quite non-normal with some long tails, especially at the lower end.  The issue is largely with petal variables (blue/green), we would get a slightly better plot if we only log-transformed sepal measurements.  But maybe we are better with untransformed data in this case.
