--- a/vignettes/Chapter16Solutions.Rmd
+++ b/vignettes/Chapter16Solutions.Rmd
@@ -83,7 +83,8 @@ bics = rep(NA, length(nClust))
 for(iClust in 1:length(nClust))
 {
   fti_Mix = species_mix(spiderFormula, data=SpiderDF,
-    family="negative.binomial", nArchetypes=nClust[iClust])
+    family="negative.binomial", nArchetypes=nClust[iClust],
+    control=list(init_method='kmeans',ecm_refit=5, ecm_steps=2))
   bics[iClust] = BIC(fti_Mix)
 }
 plot(bics~nClust, ylab="BIC", xlab="# archetypes")
@@ -134,9 +135,8 @@ logLik(ft_trait)
 library(lattice)
 a = max( abs(ft_trait$fourth.corner) )
 colort = colorRampPalette(c("blue","white","red"))
-plot.4th = levelplot(t(as.matrix(ft_trait$fourth.corner)),
-  col.regions=colort(100), at=seq(-a, a, length=100),
-  scales = list( x= list(rot = 45)) )
+plot.4th = levelplot(ft_trait$fourth.corner, col.regions=colort(100),
+           at=seq(-a, a, length=100), scales = list( x=list(rot = 45)) )
 print(plot.4th)
 coefplot(ft_trait)
 ```
@@ -161,7 +161,7 @@ coefplot(ft_anttrait)
 
 This doesn't always produce a `coefplot` because of infinite values -- this is symptomatic of non-convergence. Make sure you end up with a `logLik` value of about `-2300` or better, if this doesn't happen then re-run. I ended up using `starting.val="zero"` which usually gave better fits (it doesn't always but did this time around).
 
-*What are the key traits that environment-trait interactions, capturing why (and how) ants differ in environment response?*
+*What are the key traits that capture why (and how) ants differ in environment response?*
 
 A big one seems to be `Canopy.cover:polymorphism`. `Canopy.cover:Pilosity` also seemed to be very negative in most runs, but with a fairly large standard error.
 
@@ -183,12 +183,12 @@ newTraits = spider$trait
 # set factors not of interest here to be a constant value
 newTraits$length= mean(spider$trait$length) #set length to its mean
 newTraits$colour=factor(rep(levels(spider$trait$colour)[1],nVars),
-levels=levels(spider$trait$colour)) #set to first level of factor
+   levels=levels(spider$trait$colour)) #set to first level of factor
 # set starting rows of ’marks’ to take all possible values
 nMarks = nlevels(spider$trait$marks)
 newTraits$marks[1:nMarks]=levels(spider$trait$marks)
 # create a new env dataset where the only thing that varies is soil:
-newEnv = as.matrix( spider$x[1:2,c("soil.dry","herb.layer")] )
+newEnv = spider$x[1:2,c("soil.dry","herb.layer")]
 newEnv[,"soil.dry"]=range(scale(spider$x[,"soil.dry"]))
 newEnv[,"herb.layer"]=0
 #make predictions and plot:
